# php-spdy-benchmarks

./: README.MD
.github/workflows/: build-fastapi-image.yaml  build-fastify-image.yaml  build-gin-image.yaml  build-spdy-image.yaml  build-uwebsockets-image.yaml
fastapi/: Dockerfile
fastapi/src/app/: main.py
fastify/: Dockerfile
fastify/src/: app.js  package-lock.json  package.json
gin/: Dockerfile
gin/src/: go.mod  main.go
results/: 19-06-2022.MD
spdy/: Dockerfile  composer.json
spdy/config/: php.ini
spdy/src/: .rr.yaml  composer.json  main.php
uwebsockets/: .gitignore  CMakeLists.txt  Dockerfile  conanfile.txt
uwebsockets/src/: main.cpp
